Fix search paddings and alignments.

--- a/themes/modern/less/common.less
+++ b/themes/modern/less/common.less
@@ -1,12 +1,18 @@
-/* Border radius changes */
+/* ------ Border radius changes ------ */
 @list-group-border-radius: 0;
-@border-radius-large: 0; /* modal */
+@border-radius-large: 0; // modal
 
-/* Common element changes */
+/* ------ Mixins ------ */
+.full-width() { // Break out of the container
+  margin-right: calc(~"50% - 50vw + .5rem"); // .5rem seems to be the margin of error in Chrome
+  margin-left: calc(~"50% - 50vw + .5rem");
+}
+
+/* ------ Common element changes ------ */
 h1, h2, h3, h4 { margin: 1rem 0; }
 table { font-size: @reduced-font-size; }
 
-/* Bootstrap class overrides */
+/* ------ Bootstrap class overrides ------ */
 .badge {
   font-size: 10px;
   line-height: 1.1;
